fix: resolve horizontal overflow issue on homepage mobile view

--- a/src/Components/HomeComponents/Header/Header.module.css
+++ b/src/Components/HomeComponents/Header/Header.module.css
@@ -215,6 +215,7 @@
   }
   .title {
     font-size: 2.5rem;
+    width: 100%;
   }
   .description {
     width: 100%;
@@ -228,8 +229,8 @@
   }
   .rightSide {
     margin-top: calc(2 * var(--margin-md));
-    width: 350px;
-    height: 350px;
+    width: 100%;
+    height: auto;
   }
 }
 
